@@ -24,9 +24,7 @@ describe_show_options() {
 }
 
 do_show() {
-	local prefix=@prefix@
-	local datarootdir=@datarootdir@
-	local scriptdir=${ROOT}@datadir@/@PACKAGE@
+	local scriptdir="${ROOT}""@SCRIPTDIR@"
 
 	local dbdir="${ROOT}$(load_config \"${scriptdir}/common/config.bash\" DBDIR)"
 	local mode=all
@@ -81,9 +79,7 @@ describe_scan_options() {
 }
 
 do_scan() {
-	local prefix=@prefix@
-	local datarootdir=@datarootdir@
-	local scriptdir=${ROOT}@datadir@/@PACKAGE@
+	local scriptdir="${ROOT}""@SCRIPTDIR@"
 
 	# Parse our commandline args
 	local target="${ROOT:-/}"
@@ -149,9 +145,7 @@ describe_update_options() {
 
 do_update() {
 	local pretend deadusers deadusers_ deadgroups deadgroups_
-	local prefix=@prefix@
-	local datarootdir=@datarootdir@
-	local scriptdir=${ROOT}@datadir@/@PACKAGE@
+	local scriptdir="${ROOT}""@SCRIPTDIR@"
 
 	local dbdir="${ROOT}$(load_config \"${scriptdir}/common/config.bash\" DBDIR)"
 	local userspace="$(cat \"${DBDIR}/userspace\")"
